Dużo różnych poprawek, ale w sumie działa w końcu karta zamówienia

--- a/KamieniarstwoOrganiser/orders/templates/orders/base.html
+++ b/KamieniarstwoOrganiser/orders/templates/orders/base.html
@@ -28,6 +28,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'create_client' %}">Stwórz Klienta</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'create_order' %}">Stwórz Zlecenie</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'create_task' %}">Stwórz Zadanie</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'material_list' %}">Materiały</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'task_template_list' %}">Szablony Zleceń</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'clients' %}">Klienci</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'orders' %}">Zlecenia</a></li>
