--- a/KamieniarstwoOrganiser/orders/templates/orders/employees.html
+++ b/KamieniarstwoOrganiser/orders/templates/orders/employees.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <h2>Pracownicy</h2>
+<a href="{% url 'signup' %}" class="btn btn-primary mb-3">Dodaj Pracownika</a>
 <table class="table">
     <thead>
         <tr>
