--- a/KamieniarstwoOrganiser/orders/templates/orders/reports.html
+++ b/KamieniarstwoOrganiser/orders/templates/orders/reports.html
@@ -4,26 +4,34 @@
 
 {% block content %}
 <h2>Raporty</h2>
+<div class="mb-3">
+  <a href="{% url 'daily_report' %}" class="btn btn-primary">Pobierz raport dzienny</a>
+</div>
+
 <table class="table table-striped">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Klient</th>
-            <th>Opis</th>
-            <th>Data</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for report in reports %}
-        <tr>
-            <td>{{ report.id }}</td>
-            <td>{{ report.client }}</td>
-            <td>{{ report.description }}</td>
-            <td>{{ report.date }}</td>
-            <td>{{ report.status }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Klient</th>
+      <th>Opis</th>
+      <th>Data</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for report in reports %}
+    <tr>
+      <td>{{ report.id }}</td>
+      <td>{{ report.client }}</td>
+      <td>{{ report.description }}</td>
+      <td>{{ report.date }}</td>
+      <td>{{ report.status }}</td>
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="5">Brak raportów</td>
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
 {% endblock %}
