Konfiguracja pod Heroku14

--- a/KamieniarstwoOrganiser/orders/templates/orders/base.html
+++ b/KamieniarstwoOrganiser/orders/templates/orders/base.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Kamieniarstwo Organiser{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="preload" as="style" href="{% static 'css/styles.css' %}" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    </noscript>
 </head>
 <body>
     <!-- Boczny pasek nawigacyjny -->
